frontend/test/should_pass/compiled_rule_query_filter.grg
test t
{
---
	def var i:int;
} \ orderDescendingBy<i>

rule r
{
	modify {
	---
		exec( { emit([?t\orderDescendingBy<i>]) } );
	}
}
