frontend/test/should_fail/param_011.grg
rule r(-e:Edge-) {
  modify {}
}